--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,8 @@
   <link rel="stylesheet" href="./assets/dist/css/adminlte.css">
   <!--Fontawesome-->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
+  <!-- Animated CSS-->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 </head>
 <body class="hold-transition sidebar-collapse">
   <div class="wrapper">
